Fixing completion detection for null-restricted variables and fixing behavior for incorrect null-restricted variables without an initializer.